EKS/eks-deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 133713477530.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-eks:test
          ports:
            - containerPort: 80
              name: nginx
          resources:
            requests:
              memory: '300Mi'
              cpu: '300m'
            limits:
              memory: '1Gi'
              cpu: '1'
