EKS/eks-deploy-tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tomcat
  name: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - image: 133713477530.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat
          name: tomcat
          ports:
            - containerPort: 8080
              name: tomcat
          resources:
            requests:
              memory: '300Mi'
              cpu: '300m'
            limits:
              memory: '1Gi'
              cpu: '1'
