EKS/eks-svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-final
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
